--- a/templates/app_product_store/product_details.html
+++ b/templates/app_product_store/product_details.html
@@ -7,10 +7,8 @@
 <section class="py-3 bg-light">
     <div class="container">
       <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="#">Category name</a></li>
-          <li class="breadcrumb-item"><a href="#">Sub category</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Items</li>
+          <li class="breadcrumb-item"><a href="{% url "home" %}">Home</a></li>
+          <li class="breadcrumb-item"><a href="{% url "store" %}" aria-current="page">Items</li>
       </ol>
     </div>
   </section>
