--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,11 @@
     <div class="row">
         <aside class="col-lg col-md-3 flex-lg-grow-0">
             <nav class="nav-home-aside">
-                <h6 class="title-category">MY MARKETS <i class="d-md-none icon fa fa-chevron-down"></i></h6>
+              <h6 class="title-category">MY MARKETS <i class="d-md-none icon fa fa-chevron-down"></i></h6>
                 <ul class="menu-category">
+					<li><a href="{% url "store" %}">All Products</a></li>
 					{% for brands in b_links %}
-                    <li><a href="#">{{brands.brand_name}}</a></li>
+                    <li><a href="{{brands.get_url}}">{{brands.brand_name}}</a></li>
                     {% endfor %}
                     </li>
                 </ul>
@@ -66,7 +67,7 @@
                 <div class="card-banner border-bottom">
                   <div class="py-3" style="width:80%">
                     <h6 class="card-title">{{category.category_name}}</h6>
-                    <a href="#" class="btn btn-secondary btn-sm"> Source now </a>
+                    <a href="{{category.get_url}}" class="btn btn-secondary btn-sm"> Source now </a>
                   </div> 
                   <img src="{{category.image.url}}" height="80" class="img-bg">
                 </div>
