--- a/templates/app_product_store/store.html
+++ b/templates/app_product_store/store.html
@@ -80,6 +80,9 @@
     </header><!-- sect-heading -->
     
     {% for products in products  %}
+
+    <form action ="{% url "add_wishlist" products.id %}" method = "POST">
+        {% csrf_token %}
     <article class="card card-product-list">
         <div class="row no-gutters">
             <aside class="col-md-3">
@@ -118,6 +121,8 @@
     
                 </div> <!-- info-main.// -->
             </div> <!-- col.// -->
+
+            
             <aside class="col-sm-3">
                 <div class="info-aside">
                     <div class="price-wrap">
@@ -128,8 +133,8 @@
                     
                     <p class="text-muted mt-3">{{products.manufacture}}</p>
                     <p class="mt-3">
-                        <a href="#" class="btn btn-outline-primary"> <i class="fa fa-envelope"></i> Contact supplier </a>
-                        <a href="#" class="btn btn-light"><i class="fa fa-heart"></i> Save </a>
+                        <a href="" class="btn btn-outline-primary"> <i class="fa fa-envelope"></i> Contact supplier </a>
+                        <button type="submit"  class="btn btn-light"><i class="fa fa-heart"></i> Save </button>
                     </p>
     
                     <label class="custom-control mt-3 custom-checkbox">
@@ -140,8 +145,10 @@
     
                 </div> <!-- info-aside.// -->
             </aside> <!-- col.// -->
+        
         </div> <!-- row.// -->
     </article> <!-- card-product .// -->
+</form>
     
     {% endfor %}
     
